--- a/components/src/pages/About/About.module.scss
+++ b/components/src/pages/About/About.module.scss
@@ -6,4 +6,7 @@
     align-items: center;
     padding: 2rem;
     margin: 0 auto;
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: large;
 }
