--- a/components/src/pages/Main/Main.module.scss
+++ b/components/src/pages/Main/Main.module.scss
@@ -1,9 +1,43 @@
 .main {
-    height: 80vw;
     max-width: 1280px;
-    background-color: rgb(249, 252, 244);
+    background-color: rgb(179, 192, 255);
     display: flex;
     align-items: center;
+    flex-direction: column;
     padding: 2rem;
     margin: 0 auto;
+
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+
+        .card {
+            max-width: 200px;
+            height: auto;
+            border: 0.1rem solid black;
+            border-radius: 0.5rem;
+            overflow: hidden;
+            transition: all 0.3s ease-in-out;
+            background-color: rgb(255, 251, 247);
+
+
+            .name,
+            .species,
+            .type {
+                text-align: center;
+                padding: 1rem;
+                font-size: 1rem;
+            }
+
+            .image {
+                width: 100%;
+                height: auto;
+            }
+
+            &:hover {
+                transform: scale(1.05);
+            }
+        }
+    }
 }
