--- a/components/src/components/Navbar/Navbar.module.scss
+++ b/components/src/components/Navbar/Navbar.module.scss
@@ -1,11 +1,14 @@
 .navbar {
-    height: 10vw;
+    height: 5vw;
     max-width: 1280px;
-    background-color: rgb(255, 251, 247);
+    background-color: rgb(205, 205, 205);
     display: flex;
     align-items: center;
     padding: 2rem;
     margin: 0 auto;
+    font-size: 2rem;
+    justify-content: center;
+    gap: 3rem;
 
     a {
         padding: 3rem;
