--- a/components/src/pages/Main/Main.module.scss
+++ b/components/src/pages/Main/Main.module.scss
@@ -11,6 +11,7 @@
         display: flex;
         flex-wrap: wrap;
         gap: 2rem;
+        justify-content: center;
 
         .card {
             max-width: 200px;
