--- a/components/src/pages/About/About.module.scss
+++ b/components/src/pages/About/About.module.scss
@@ -1,12 +1,13 @@
 .about {
-    height: 80vw;
-    max-width: 1280px;
-    background-color: rgb(255, 240, 251);
-    display: flex;
-    align-items: center;
-    padding: 2rem;
-    margin: 0 auto;
-    flex-direction: column;
-    align-items: flex-start;
-    font-size: large;
+  height: 80vw;
+  max-width: 1280px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  padding: 2rem;
+  margin: 0 auto;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: large;
+  color: black;
 }
