--- a/components/src/pages/Main/Main.module.scss
+++ b/components/src/pages/Main/Main.module.scss
@@ -42,3 +42,22 @@
     }
   }
 }
+
+.spinner {
+  width: 150px;
+  height: 150px;
+  border: 5px solid rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  border-top: 5px solid black;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
