--- a/components/src/components/Navbar/Navbar.module.scss
+++ b/components/src/components/Navbar/Navbar.module.scss
@@ -1,7 +1,8 @@
 .navbar {
   height: 5vw;
   max-width: 1280px;
-  background-color: rgb(205, 205, 205);
+  background-color: rgb(255, 255, 255);
+  border: 0.1rem solid rgba(0, 0, 0, 0.151);
   display: flex;
   align-items: center;
   padding: 2rem;
