--- a/components/src/index.css
+++ b/components/src/index.css
@@ -47,6 +47,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  border-color: #b8b8b8;
 }
 
 button:hover {
