--- a/components/src/pages/Main/Main.module.scss
+++ b/components/src/pages/Main/Main.module.scss
@@ -1,12 +1,19 @@
 .main {
   height: 95vw;
   max-width: 1280px;
-  background-color: rgb(179, 192, 255);
+  background-color: rgb(255, 255, 255);
+  border: 0.1rem solid rgba(0, 0, 0, 0.151);
   display: flex;
   align-items: center;
   flex-direction: column;
   padding: 2rem;
   margin: 0 auto;
+
+  .pagination {
+    display: flex;
+    gap: 3rem;
+    margin: 2rem;
+  }
 
   .container {
     display: flex;
@@ -22,6 +29,7 @@
       overflow: hidden;
       transition: all 0.3s ease-in-out;
       background-color: rgb(255, 251, 247);
+      cursor: pointer;
 
       .name,
       .species,
@@ -48,8 +56,9 @@
   height: 150px;
   border: 5px solid rgba(0, 0, 0, 0.3);
   border-radius: 50%;
-  border-top: 5px solid black;
+  border-top: 5px solid rgb(0, 0, 0);
   animation: spin 1s linear infinite;
+  background-image: url('../../assets/spinner.png') no-repeat;
 }
 
 @keyframes spin {
