--- a/components/src/pages/About/About.module.scss
+++ b/components/src/pages/About/About.module.scss
@@ -1,7 +1,8 @@
 .about {
   height: 80vw;
-  max-width: 1280px;
+  max-width: 1920px;
   background-color: rgb(255, 255, 255);
+  border: 0.1rem solid rgba(0, 0, 0, 0.151);
   display: flex;
   align-items: center;
   padding: 2rem;
@@ -10,4 +11,5 @@
   align-items: flex-start;
   font-size: large;
   color: black;
+  font-size: 2rem;
 }
