--- a/components/index.html
+++ b/components/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>React RSS App</title>
-  <link rel="icon" href="https://pngimg.com/uploads/rick_morty/rick_morty_PNG1.png" />
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3336/3336008.png" />
 </head>
 
 <body>
