--- a/components/src/pages/Main/Main.module.scss
+++ b/components/src/pages/Main/Main.module.scss
@@ -8,57 +8,16 @@
   padding: 2rem;
   margin: 0 auto;
 
-  .pagination {
+  .planets {
     display: flex;
-    gap: 3rem;
-    margin: 2rem;
-  }
-
-  .content {
-    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     gap: 3rem;
 
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      justify-content: flex-start;
-      width: 50%;
-      height: 100%;
-    }
-
-    .modal {
-      width: 50%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.9);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border: 3px solid black;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 5rem;
-
-      opacity: 0;
-      transform: translateX(100%);
-      transition: opacity 0.3s ease, transform 0.3s ease;
-
-      &.active {
-        opacity: 1;
-        transform: translateX(0);
-      }
-
-
-      .modalContent {
-        background-color: rgb(255, 255, 255);
-
-        img {
-          width: 100%;
-          height: auto;
-        }
-      }
+    .planet {
+      border: 1px solid rgba(0, 0, 0, 0.151);
+      max-width: 200px;
+      padding: 2rem;
     }
   }
 }
