--- a/components/src/pages/Main/Main.module.scss
+++ b/components/src/pages/Main/Main.module.scss
@@ -13,23 +13,18 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 3rem;
-
-    .planet {
-      border: 1px solid rgba(0, 0, 0, 0.151);
-      max-width: 200px;
-      padding: 2rem;
-    }
   }
 }
 
 .spinner {
-  width: 150px;
-  height: 150px;
-  border: 5px solid rgba(0, 0, 0, 0.3);
-  border-radius: 50%;
-  border-top: 5px solid rgb(0, 0, 0);
+  margin-top: 5rem;
+  width: 40rem;
+  height: 40rem;
   animation: spin 1s linear infinite;
-  background-image: url('../../assets/spinner.png') no-repeat;
+  background: url('../../assets/planet.png') center/contain no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @keyframes spin {
