--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -1,6 +1,6 @@
 .spinner {
     border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
+    border-top: 16px solid #37a1e8;
     border-radius: 50%;
     width: 50px;
     height: 50px;
