--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,6 +2,35 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.card:first-child {
+  border: 1px solid yellow;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
   gap: 0.5rem;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 0 auto;
+  max-width: 500px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
