--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -13,24 +13,43 @@
 }
 
 .card:first-child {
-  border: 1px solid yellow;
+  animation: borderAnimation 5s;
 }
 
 .card {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 0.5rem;
   padding: 1rem;
   border: 1px solid #ccc;
   border-radius: 5px;
   margin: 0 auto;
-  max-width: 500px;
+  width: 20rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
+  cursor: pointer;
 }
 
 .card:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(248, 247, 247, 0.742);
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+  border-radius: 2rem;
+  margin-bottom: 1rem;
+  align-self: center;
+}
+
+@keyframes borderAnimation {
+  0% {
+    border: 5px solid yellow;
+  }
+
+  100% {
+    border: 1px solid #ccc;
+  }
 }
